[package]
name = "concurrency-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "01-asm-execution-context",
    "02-asm-green-threads",
    "03-syscalls",
    "04-epoll"
]

[[bin]]
name = "green-threads-sandbox"
path = "01-asm-execution-context/src/main.rs"
